--- a/index.html
+++ b/index.html
@@ -35,3 +35,10 @@
         
     </body>
 </html>
+
+<!-- Ctrl+물결 -->
+<!-- git init 입력 -->
+<!-- git add -A 입력 -->
+<!-- git commit -m "설명입력" -->
+<!-- 깃헙 들어가서 리파짓들가서 새로 만들고 or push an existing 밑에있는거 복사 -->
+<!-- 터미널에 입력 및 깃헙 아디비번 입력 -->
